--- a/public/lab_5/styles.css
+++ b/public/lab_5/styles.css
@@ -46,8 +46,11 @@ h1{
   }
 
   .flex-inner li {
-    width: 80px;
+    width: 95px;
   }
-  .button{
-    margin: 10px;
+  button#submit{
+    margin-right: 10px;
+  }
+  .checkbox-list-label{
+    
   }
