--- a/public/lab_7/styles.css
+++ b/public/lab_7/styles.css
@@ -10,6 +10,9 @@ body {
 
 .container {
   min-height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 .header {
@@ -46,8 +49,8 @@ body {
 }
 
 .flex-outer button {
-  background-color: darkolivegreen;
-  color: white;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 0, 0);
   padding: 6px 12px;
   border: none;
   text-transform: uppercase;
@@ -84,8 +87,8 @@ h1 {
   margin: 20px 50px;
   padding: 0 20px;
   min-height: 75px;
-  background-color: darkolivegreen;
-  color: white;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 0, 0);
   display: flex;
   
   align-items: center;
